init create client modal

--- a/src/View/page/client-create.html
+++ b/src/View/page/client-create.html
@@ -79,6 +79,34 @@
               </div>
           </div>
       </div>
+      <div class="create-client__modal-body">
+            <div class="field">
+                <label for="" class="label">Civility</label>
+                <div class="input__text-icon">
+                    <span class="input__icon"><i class="icon-mail"></i></span>
+                    <input type="text" class="input__text" placeholder="johnidoe@oply.com">
+                </div>
+            </div>
+            <div class="field">
+                <label for="" class="label">Civility</label>
+                <div class="input__text-icon">
+                    <span class="input__icon"><i class="icon-mail"></i></span>
+                    <input type="text" class="input__text" placeholder="johnidoe@oply.com">
+                </div>
+            </div>
+            <div class="field">
+                <label for="" class="label">Civility</label>
+                <div class="input__text-icon">
+                    <span class="input__icon"><i class="icon-mail"></i></span>
+                    <input type="text" class="input__text" placeholder="johnidoe@oply.com">
+                </div>
+            </div>
+      </div>
+      <div class="create-client__modal-footer">
+          <div class="create-client__modal-btn-outer">
+            <button class="btn create-client__modal-btn">Étape suivante</button>
+          </div>
+      </div>
   </div>
 </body>
 </html>
