--- a/web/scss/components/_btn.scss
+++ b/web/scss/components/_btn.scss
@@ -6,8 +6,10 @@
 	font-weight: $fwMedium;
 	height: 54px;
 	width: 100%;
+	line-height: 54px;
 	border-radius: $radiusSmall;
 	border: none;
+	text-align: center;
 	text-transform: uppercase;
 	letter-spacing: .75px;
 	transition: .3s $cubic01;
