--- a/src/View/page/client-create.html
+++ b/src/View/page/client-create.html
@@ -88,14 +88,28 @@
                 </div>
             </div>
             <div class="field">
-                <label for="" class="label">Civility</label>
+                <label for="" class="label">First name</label>
                 <div class="input__text-icon">
                     <span class="input__icon"><i class="icon-mail"></i></span>
                     <input type="text" class="input__text" placeholder="johnidoe@oply.com">
                 </div>
             </div>
             <div class="field">
-                <label for="" class="label">Civility</label>
+                <label for="" class="label">Last name</label>
+                <div class="input__text-icon">
+                    <span class="input__icon"><i class="icon-mail"></i></span>
+                    <input type="text" class="input__text" placeholder="johnidoe@oply.com">
+                </div>
+            </div>
+            <div class="field">
+                <label for="" class="label">Email</label>
+                <div class="input__text-icon">
+                    <span class="input__icon"><i class="icon-mail"></i></span>
+                    <input type="text" class="input__text" placeholder="johnidoe@oply.com">
+                </div>
+            </div>
+            <div class="field">
+                <label for="" class="label">Phone</label>
                 <div class="input__text-icon">
                     <span class="input__icon"><i class="icon-mail"></i></span>
                     <input type="text" class="input__text" placeholder="johnidoe@oply.com">
@@ -104,7 +118,10 @@
       </div>
       <div class="create-client__modal-footer">
           <div class="create-client__modal-btn-outer">
-            <button class="btn create-client__modal-btn">Étape suivante</button>
+            <button class="btn create-client__modal-btn">
+                <span class="btn__inner-text">1/3</span>
+                <span class="btn__inner-text">Étape suivante</span>
+            </button>
           </div>
       </div>
   </div>
