--- a/web/scss/components/_btn.scss
+++ b/web/scss/components/_btn.scss
@@ -1,4 +1,6 @@
 .btn {
+	display: flex;
+	justify-content: space-between;
 	background: $blue;
 	color: $white;
 	font-size: 13px;
@@ -6,6 +8,7 @@
 	font-weight: $fwMedium;
 	height: 54px;
 	width: 100%;
+	padding: 0 5rem;
 	line-height: 54px;
 	border-radius: $radiusSmall;
 	border: none;
@@ -18,6 +21,10 @@
 	&:hover {
 		background: $blueHover;
 		transition: .3s $cubic01;
+	}
+
+	&__inner-text {
+		color: inherit;
 	}
 }
 
