--- a/web/scss/tools/_variables.scss
+++ b/web/scss/tools/_variables.scss
@@ -49,4 +49,6 @@ $fwBolder: 800;
  * BOX SHADOWS
  */
 
- $boxShadow01: 0 2px 6px 0 rgba(0,176,255,0.08);
+$boxShadow01: 0 2px 6px 0 rgba(0,176,255,0.08);
+$boxShadow02: 0 13px 14px 0 rgba(0,0,0,0.06);
+$boxShadow02hover: 0 13px 30px 0 rgba(0,0,0,0.4);
