add new step to stepper

--- a/src/View/page/client-create.html
+++ b/src/View/page/client-create.html
@@ -73,7 +73,11 @@
                       <span class="stepper__step-label">Personal informations</span>
                   </div>
                   <div class="stepper__step">
-                        <span class="stepper__step-number">2</span>
+                    <span class="stepper__step-number">2</span>
+                    <span class="stepper__step-label">Client company informations</span>
+                </div>
+                  <div class="stepper__step">
+                        <span class="stepper__step-number">3</span>
                         <span class="stepper__step-label">Process</span>
                     </div>
               </div>
