--- a/web/scss/containers/_stepper.scss
+++ b/web/scss/containers/_stepper.scss
@@ -1,6 +1,6 @@
 .stepper {
     width: 50%;
-    max-width: 250px;
+    min-width: 250px;
     margin: 0 auto;
 
     &__steps {
@@ -51,6 +51,10 @@
             background: $bodyColor;
             color: $white;
             border: 1px solid transparent;
+        }
+
+        &.current &-label {
+            font-weight: $fwMedium;
         }
     }
 }
