blur content behind create client modal

--- a/web/scss/pages/_create-client.scss
+++ b/web/scss/pages/_create-client.scss
@@ -2,7 +2,7 @@
     position: relative;
 
     .layout__dashboard {
-        opacity: .05;
+        filter: blur(15px);
     }
 
     .title__dashboard {
