update add client button

--- a/src/View/page/client-create-s1.html
+++ b/src/View/page/client-create-s1.html
@@ -16,7 +16,7 @@
         <img src="https://res.cloudinary.com/dj09xr9gd/image/upload/v1528893547/logo_1.svg">
         <p></i>JOEY</p> 
       </div>
-      <button class="btn btn__client">Add a client</button>
+      <button class="btn btn__client"><i class="icon-add-user"></i>Add a client</button>
     </div>
     <div class="info info-user">
       <p class="name">Mr. John Doe</p>
