--- a/web/scss/components/_btn.scss
+++ b/web/scss/components/_btn.scss
@@ -41,10 +41,19 @@
 }
 
 .btn__client {
-	max-width: 153px;
+	display: flex;
+	align-items: center;
+	max-width: 170px;
 	padding: 0 19px;
-	height: 42px;
-	font-size: 16px;
+	height: 38px;
+	font-size: 1rem;
 	line-height: 25px;
+	font-weight: $fwLight;
 	text-transform: initial;
+
+	.icon-add-user:before {
+		font-size: 1.5rem;
+		color: $white;
+		margin-right: .5rem;
+	}
 }
