switch header class between sign up page and dashboard

--- a/src/View/page/client-create-s1.html
+++ b/src/View/page/client-create-s1.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="client-list create-client">
-  <header class="header-connect">
+  <header class="header">
     <div class="info">
       <div class="logo">
         <img src="https://res.cloudinary.com/dj09xr9gd/image/upload/v1528893547/logo_1.svg">
@@ -23,6 +23,7 @@
       <div class="img-user"></div>
     </div>
   </header>
+
   <div class="layout layout__dashboard">
     <h1 class="title__dashboard">Liste clients</h1>
     <table class="table">
