--- a/src/View/page/client-list.html
+++ b/src/View/page/client-list.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="client-list">
-  <header class="header-connect">
+  <header class="header">
     <div class="info">
       <div class="logo">
         <img src="https://res.cloudinary.com/dj09xr9gd/image/upload/v1528893547/logo_1.svg">
