--- a/src/View/page/sign-up.html
+++ b/src/View/page/sign-up.html
@@ -10,7 +10,7 @@
 </head>
 <body class="sign-up">
     <div class="layout">
-        <header class="header"><a href="">Oply</a></header>
+        <header class="header-connect"><a href="">Oply</a></header>
 
         <main>
             <div class="sign-up__main">
