init user component + update header

--- a/web/scss/style.scss
+++ b/web/scss/style.scss
@@ -32,6 +32,8 @@
 @import 'components/input';
 @import 'components/tooltip';
 
+@import 'components/user';
+
 // ORGANISMS
 @import 'containers/header';
 @import 'containers/header-connect';
