--- a/src/View/page/client-create-s1.html
+++ b/src/View/page/client-create-s1.html
@@ -11,17 +11,36 @@
 
 <body class="client-list create-client">
   <header class="header">
-    <div class="info">
-      <div class="logo">
-        <img src="https://res.cloudinary.com/dj09xr9gd/image/upload/v1528893547/logo_1.svg">
-        <p></i>JOEY</p> 
+      <div class="header__inner">
+        <div class="header__lside">
+            <a href="" class="header__logo">
+                <img src="https://res.cloudinary.com/dj09xr9gd/image/upload/v1528893547/logo_1.svg">
+                <span>JOEY</span> 
+            </a>
+
+            <nav class="header__nav">
+                <ul class="header__nav-inner">
+                    <li class="header__nav-el">
+                        <a href="">Client list</a>
+                    </li>
+                    <li class="header__nav-el">
+                        <a href="">Sales list</a>
+                    </li>
+                    <li class="header__nav-el">
+                        <a href="">Manage my account</a>
+                    </li>
+                </ul>
+            </nav>
+
+        </div>
+        <div class="header__rside">
+            <button class="btn btn__client"><i class="icon-add-user"></i>Add a client</button>
+            <div class="user">
+                <p class="user__name">Mr. John Doe</p>
+                <div class="user__img"></div>
+            </div>
+        </div>
       </div>
-      <button class="btn btn__client"><i class="icon-add-user"></i>Add a client</button>
-    </div>
-    <div class="info info-user">
-      <p class="name">Mr. John Doe</p>
-      <div class="img-user"></div>
-    </div>
   </header>
 
   <div class="layout layout__dashboard">
