--- a/web/scss/containers/_header-connect.scss
+++ b/web/scss/containers/_header-connect.scss
@@ -1,66 +1,8 @@
-.header {
-	display: flex;
-	justify-content: space-between;
-	background: $white;
-	box-shadow: 0 2px 4px 0 rgba(0,0,0,0.05);
-	padding: 20px 70px;
+.header-connect {
+    margin-bottom: 3rem;
+    padding-top: 2rem;
 
-	@include maxWidth($bpTablet) {
-		padding: 20px;
-	}
-
-	.logo {
-		display: flex;
-		align-items: center;
-
-		img {
-			width: 50px;
-			margin-right: 10px;
-		}
-
-		p {
-			font-size: 21px;
-			line-height: 27px;
-			font-weight: 300;
-			color: $textBlue;
-			margin-right: 53px;
-		}
-	}
-
-	.link-header {
-		text-decoration: none;
-		white-space: nowrap;
-		margin-right: 34px;
-		font-size: 14px;
-	}
-
-	.info {
-		display: flex;
-		align-items: center;
-
-		@include maxWidth($bpTablet) {
-			width: 100%;
-			justify-content: space-between;
-		}
-
-		&-user { 
-
-			@include maxWidth($bpTablet) {
-				display: none;
-			}
-
-			.name {
-				font-size: 14px;
-				color: $textBlue;
-				margin-right: 30px;
-			}
-
-			.img-user {
-				border-radius: 50px;
-				height: 44px;
-				width: 44px;
-				background-color: $textBlue;
-			}
-		}
-	}
+    @include minWidth($bpTablet) {
+        margin: 0 auto 6rem auto;
+    }
 }
