add current state to nav link

--- a/src/View/page/client-create-s1.html
+++ b/src/View/page/client-create-s1.html
@@ -20,7 +20,7 @@
 
             <nav class="header__nav">
                 <ul class="header__nav-inner">
-                    <li class="header__nav-el">
+                    <li class="header__nav-el current">
                         <a href="">Client list</a>
                     </li>
                     <li class="header__nav-el">
