--- a/src/View/page/connexion.html
+++ b/src/View/page/connexion.html
@@ -15,7 +15,7 @@
         <main>
             <div class="sign-up__main">
                 <div class="sign-up__headtitle">
-                    <h1 class="title__first">Sign up to Joey</h1>
+                    <h1 class="title__first">Sign in to Joey</h1>
                     <p class="subtitle">Petite catchline des familles</p>
                 </div>
             
@@ -35,20 +35,13 @@
                                 <input type="text" class="input__text" placeholder="johnidoe@oply.com">
                             </div>
                         </div>
-                        <div class="field">
-                            <label for="" class="label">Confirmation of password</label>
-                            <div class="input__text-icon">
-                                <span class="input__icon"><i class="icon-key"></i></span>
-                                <input type="text" class="input__text" placeholder="johnidoe@oply.com">
-                            </div>
-                        </div>
                     </div>
     
                     <div class="sign-up__form-footer">
                         <div class="btn__outer">
-                            <button class="btn btn__center">Sign up now</button>
+                            <button class="btn btn__center">Sign in now</button>
                         </div>
-                        <p class="btn__bottom-msg">Already have an account? <a href="">Sign in here</a></a></p>
+                        <p class="btn__bottom-msg">Doesn't have an account? <a href="">Sign up here</a></a></p>
                     </div>
                 </form>
             </div>
