--- a/src/View/page/client-list.html
+++ b/src/View/page/client-list.html
@@ -45,7 +45,7 @@
     </div>
   </header>
   <div class="layout layout__dashboard">
-    <h1 class="title__dashboard">Liste clients</h1>
+    <h1 class="title__dashboard">Client list</h1>
     <table class="table">
       <tr class="table__head-row">
         <th>
