--- a/src/View/page/client-list.html
+++ b/src/View/page/client-list.html
@@ -1,71 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="../../../web/css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,800" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+  <link rel="stylesheet" type="text/css" href="../../../web/css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,800" rel="stylesheet">
 </head>
 
 <body class="client-list">
   <header class="header">
-    <div class="info">
-      <div class="logo">
-        <img src="https://res.cloudinary.com/dj09xr9gd/image/upload/v1528893547/logo_1.svg">
-        <p></i>JOEY</p> 
+    <div class="header__inner">
+      <div class="header__lside">
+        <a href="" class="header__logo">
+          <img src="https://res.cloudinary.com/dj09xr9gd/image/upload/v1528893547/logo_1.svg">
+          <span>JOEY</span>
+        </a>
+
+        <nav class="header__nav">
+          <ul class="header__nav-inner">
+            <li class="header__nav-el">
+              <a href="">Client list</a>
+            </li>
+            <li class="header__nav-el">
+              <a href="">Sales list</a>
+            </li>
+            <li class="header__nav-el">
+              <a href="">Manage my account</a>
+            </li>
+          </ul>
+        </nav>
+
       </div>
-      <a href="" class="link-header">Liste clients</a>
-      <a href="" class="link-header">Paramètre compte</a>
-      <a href="" class="link-header">Liste managers</a>
-    </div>
-    <div class="info info-user">
-      <button class="btn btn__client">Add a client</button>
-      <p class="name">Mr. John Doe</p>
-      <div class="img-user"></div>
+      <div class="header__rside">
+        <button class="btn btn__client">
+          <i class="icon-add-user"></i>Add a client</button>
+        <div class="user">
+          <p class="user__name">Mr. John Doe</p>
+          <div class="user__img"></div>
+        </div>
+      </div>
     </div>
   </header>
   <div class="layout layout__dashboard">
-    <h1 class="title__dashboard">Liste clients</h1>
+    <h1 class="title__dashboard">Client list</h1>
     <table class="table">
-        <tr class="table__head-row">
-            <th class="table__head-cell">Account name <i class="icon-arrow-bottom"></i></th>
-            <th class="table__head-cell">Last name <i class="icon-arrow-bottom"></i></th>
-            <th class="table__head-cell">Name <i class="icon-arrow-bottom"></i></th>
-            <th class="table__head-cell">Status <i class="icon-arrow-bottom"></i></th>
-            <th class="table__head-cell">Created at <i class="icon-arrow-bottom"></i></th>
-            <th class="table__head-cell">Office home <i class="icon-arrow-bottom"></i></th>
-            <th class="table__head-cell">Impact level <i class="icon-arrow-bottom"></i></th>
-        </tr>
-        <tr class="table__body-row">
-            <td class="table__body-cell">TF1 - Journal de midi</td>
-            <td class="table__body-cell">Pernault</td>
-            <td class="table__body-cell">Jean-Pierre</td>
-            <td class="table__body-cell">
-                <span class="tag__process color-turquoise">In process</span>
-            </td>
-            <td class="table__body-cell">01/12/2018</td>
-            <td class="table__body-cell">+337 70 67 51 73</td>
-            <td class="table__body-cell">
-              <span class="tag__impact high">High</span>
-            </td>
-        </tr>
-        <tr class="table__body-row">
-            <td class="table__body-cell">TF1 - Journal de midi</td>
-            <td class="table__body-cell">Pernault</td>
-            <td class="table__body-cell">Jean-Pierre</td>
-            <td class="table__body-cell">
-              <div class="tag__process color-orange">Validated</div>
-            </td>
-            <td class="table__body-cell">01/12/2018</td>
-            <td class="table__body-cell">+337 70 67 51 73</td>
-            <td class="table__body-cell">
-              <span class="tag__impact low">Low</span>
-            </td>
-        </tr>
+      <tr class="table__head-row">
+        <th>
+          <div class="table__head-cell current">
+            Account name
+            <i class="icon-arrow-bottom"></i>
+          </div>
+        </th>
+        <th>
+          <div class="table__head-cell">
+            Last name
+            <i class="icon-arrow-bottom"></i>
+          </div>
+        </th>
+        <th>
+          <div class="table__head-cell">
+            Name
+            <i class="icon-arrow-bottom"></i>
+          </div>
+        </th>
+        <th>
+          <div class="table__head-cell">
+            Status
+            <i class="icon-arrow-bottom"></i>
+          </div>
+        </th>
+        <th>
+          <div class="table__head-cell">
+            Created at
+            <i class="icon-arrow-bottom"></i>
+          </div>
+        </th>
+        <th>
+          <div class="table__head-cell">
+            Office home
+            <i class="icon-arrow-bottom"></i>
+          </div>
+        </th>
+        <th>
+          <div class="table__head-cell">
+            Impact level
+            <i class="icon-arrow-bottom"></i>
+          </div>
+        </th>
+      </tr>
+      <tr class="table__body-row">
+        <td class="table__body-cell">TF1 - Journal de midi</td>
+        <td class="table__body-cell">Pernault</td>
+        <td class="table__body-cell">Jean-Pierre</td>
+        <td class="table__body-cell">
+          <span class="tag__process color-turquoise">In process</span>
+        </td>
+        <td class="table__body-cell">01/12/2018</td>
+        <td class="table__body-cell">+337 70 67 51 73</td>
+        <td class="table__body-cell">
+          <span class="tag__impact high">High</span>
+        </td>
+      </tr>
+      <tr class="table__body-row">
+        <td class="table__body-cell">TF1 - Journal de midi</td>
+        <td class="table__body-cell">Pernault</td>
+        <td class="table__body-cell">Jean-Pierre</td>
+        <td class="table__body-cell">
+          <div class="tag__process color-orange">Validated</div>
+        </td>
+        <td class="table__body-cell">01/12/2018</td>
+        <td class="table__body-cell">+337 70 67 51 73</td>
+        <td class="table__body-cell">
+          <span class="tag__impact low">Low</span>
+        </td>
+      </tr>
     </table>
   </div>
-    
+
 </body>
+
 </html>
