remove now useless client create modal

--- a/src/View/page/client-create.html
+++ b/src/View/page/client-create.html
@@ -211,6 +211,7 @@
                     </div>
                 </div>
             </div>
+            <!-- final step : success ! -->
             <div class="create-client__modal-step success">
                 <h2 class="modal__main-title">All done!</h2>
                 <p>The client
