add icon & init html

--- a/web/scss/components/_title.scss
+++ b/web/scss/components/_title.scss
@@ -16,3 +16,12 @@
 	margin-top: 56px;
 	margin-bottom: 40px;
 }
+
+.title__customerCard {
+	font-size: 31px;
+	line-height: 47px;
+	font-weight: 700;
+	color: $blue;
+	margin-top: 44px;
+	margin-bottom: 34px;
+}
