--- a/web/scss/style.scss
+++ b/web/scss/style.scss
@@ -12,6 +12,7 @@
 @import 'pages/sign-up';
 @import 'pages/client-list';
 @import 'pages/create-client';
+@import 'pages/client-card';
 
 
 // ATOMS
