--- a/src/View/page/index.html
+++ b/src/View/page/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="../../../web/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,800" rel="stylesheet">
     <title>Oply</title>
+
 </head>
+
 <body>
-	<div class="form">
+    <div class="form">
         <div class="field">
             <label for="" class="label">Your email address</label>
             <input type="text" value="johndoe@gmail.com" class="input__text">
@@ -21,10 +24,42 @@
             <input type="text" value="johndoe@gmail.com" class="input__text">
         </div>
         <div class="field field--disable">
-                <label for="" class="label">Your email address</label>
-                <input type="text" value="johndoe@gmail.com" class="input__text">
-            </div>
+            <label for="" class="label">Your email address</label>
+            <input type="text" value="johndoe@gmail.com" class="input__text">
+        </div>
     </div>
-	<button class="btn">Connexion</button>
+    <button class="btn">Connexion</button>
+    <div class="center">
+        <div class="custom-select-wrapper">
+            <select name="sources" id="sources" class="custom-select sources" placeholder="SELECTOR" style="display: none;">
+                <option value="profile">Profile</option>
+                <option value="profile">Profile</option>
+                <option value="word">Word</option>
+                <option value="hashtag">Hashtag</option>
+                <option value="profile">Profile</option>
+                <option value="word">Word</option>
+                <option value="hashtag">Hashtag</option>
+                <option value="word">Word</option>
+                <option value="hashtag">Hashtag</option>
+            </select>
+            <div class="custom-select sources">
+                <span class="custom-select-trigger">SELECTOR</span>
+                <div class="custom-options">
+                    <span class="custom-option" data-value="profile">Profile</span>
+                    <span class="custom-option" data-value="profile">Profile</span>
+                    <span class="custom-option" data-value="word">Word</span>
+                    <span class="custom-option" data-value="hashtag">Hashtag</span>
+                    <span class="custom-option" data-value="profile">Profile</span>
+                    <span class="custom-option" data-value="word">Word</span>
+                    <span class="custom-option" data-value="hashtag">Hashtag</span>
+                    <span class="custom-option" data-value="word">Word</span>
+                    <span class="custom-option" data-value="hashtag">Hashtag</span>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+
+<script src="../../../web/js/select.js"></script>
+
 </html>
