--- a/web/scss/style.scss
+++ b/web/scss/style.scss
@@ -31,6 +31,7 @@
 @import 'components/label';
 @import 'components/input';
 @import 'components/tooltip';
+@import 'components/select';
 
 @import 'components/user';
 
