--- a/web/scss/style.scss
+++ b/web/scss/style.scss
@@ -22,6 +22,7 @@
 // even smaller then atoms
 @import 'components/tag';
 @import 'components/btn';
+@import 'components/block-info';
 
 // titles
 @import 'components/title';
