--- a/src/View/page/client-card.html
+++ b/src/View/page/client-card.html
@@ -51,30 +51,55 @@
       </div>
     </div>
 
-      <div class="block container">
-        <div class="block">
-          <div class="title">
-            <h2>Account information</h2>
-            <span class="icon_mail"></span>
-          </div>
-          <div class="info">
-            <span class="icon_mail"></span>
-            <p>Jean-Michel StartUpfutur</p>
-          </div>
-          <div class="info">
-            <span class="icon_mail"></span>
-            <p>jean.michel@startupfutur.com</p>
-          </div>
-          <div class="info">
-            <span class="icon_mail"></span>
-            <p>33 rue marbeuf, 75008 Paris</p>
-          </div>
-          <div class="info">
-            <span class="icon_mail"></span>
-            <p>06 79 24 55 39</p>
-          </div>    
+    <div class="block__container">
+      <div class="block-info">
+        <div class="title info__containTitle">
+          <h2 class="title__blockInfo">Account information</h2>
+          <a class="icon icon-edit"></a>
+        </div>
+        <div class="info__text first">
+          <span class="icon-user"></span>
+          <p>Jean-Michel StartUpfutur</p>
+        </div>
+        <div class="info__text">
+          <span class="icon-mail"></span>
+          <p>jean.michel@startupfutur.com</p>
+        </div>
+        <div class="info__text">
+          <span class="icon-house"></span>
+          <p>33 rue marbeuf, 75008 Paris</p>
+        </div>
+        <div class="info__text">
+          <span class="icon-phone"></span>
+          <p>06 79 24 55 39</p>
+        </div>    
+      </div>
+
+      <div class="block-info">
+        <div class="title info__containTitle">
+          <h2 class="title__blockInfo">Process</h2>
+          <a class="icon icon-edit"></a>
         </div>
       </div>
+
+      <div class="block-info">
+        <div class="title info__containTitle">
+          <h2 class="title__blockInfo">Complementary infos</h2>
+          <a class="icon icon-edit"></a>
+        </div>   
+      </div>
+    </div>
+
+    <div class="block-info">
+      <div class="title info__containTitle">
+        <h2 class="title__blockInfo">Rapport de visite</h2>
+      </div>
+
+      <div class="info__text info__data">
+        <p>No data to display</p>
+        <button class="btn btn__visit"><i class="icon-add"></i>Ajouter un rapport de visite</button>
+      </div>
+    </div>
   </div>
 </body>
 </html>
