--- a/web/scss/components/_title.scss
+++ b/web/scss/components/_title.scss
@@ -25,3 +25,10 @@
 	margin-top: 44px;
 	margin-bottom: 34px;
 }
+
+.title__blockInfo {
+	font-size: 16px;
+	line-height: 25px;
+	font-weight: 500;
+	padding: 13px 0 11px;
+}
