--- a/src/View/admin/client/adminClientAdd.html.twig
+++ b/src/View/admin/client/adminClientAdd.html.twig
@@ -3,7 +3,7 @@
     <form action="" method="post">
 
         <div>
-            <input type="hidden" name="id" ">
+            <input type="hidden" name="id" value="">
         </div>
         <div>
             <label for="">Prénom</label>
@@ -19,7 +19,7 @@
         </div>
         <div>
             <label for="">Password</label>
-            <input type="text" name="pwd" >
+            <input type="password" name="pwd" >
         </div>
         <div>
             <label for="">Civilité</label>
