--- a/web/scss/components/_title.scss
+++ b/web/scss/components/_title.scss
@@ -17,10 +17,10 @@
 	margin-bottom: 40px;
 }
 
-.title__customerCard {
+.title__clientCard {
 	font-size: 31px;
 	line-height: 47px;
-	font-weight: 700;
+	font-weight: $fwBold;
 	color: $blue;
 	margin-top: 44px;
 	margin-bottom: 34px;
