Finish front-end verification

--- a/src/View/page/sign-up.html
+++ b/src/View/page/sign-up.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,9 +9,12 @@
     <link rel="stylesheet" type="text/css" href="../../../web/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,800" rel="stylesheet">
 </head>
+
 <body class="sign-up">
     <div class="layout">
-        <header class="header-connect"><a href="">Oply</a></header>
+        <header class="header-connect">
+            <a href="">Oply</a>
+        </header>
 
         <main>
             <div class="sign-up__main">
@@ -18,37 +22,48 @@
                     <h1 class="title__first">Sign up to Joey</h1>
                     <p class="subtitle">Petite catchline des familles</p>
                 </div>
-            
-                <form action="">
+
+                <form action="" name="SIGNUP" class="formData">
                     <div class="sign-up__form-body">
                         <div class="field">
-                            <label for="" class="label">Email address<i class="tooltip-info icon-tooltip"></i></label>
+                            <label for="" class="label">Email address
+                                <i class="tooltip-info icon-tooltip"></i>
+                            </label>
                             <div class="input__text-icon">
-                                <span class="input__icon"><i class="icon-mail"></i></span>
-                                <input type="text" class="input__text" placeholder="johnidoe@oply.com">
+                                <span class="input__icon">
+                                    <i class="icon-mail"></i>
+                                </span>
+                                <input type="text" name="email" class="input__text" placeholder="johnidoe@oply.com">
                             </div>
                         </div>
                         <div class="field">
                             <label for="" class="label">Password</label>
                             <div class="input__text-icon">
-                                <span class="input__icon"><i class="icon-key"></i></span>
-                                <input type="text" class="input__text" placeholder="johnidoe@oply.com">
+                                <span class="input__icon">
+                                    <i class="icon-key"></i>
+                                </span>
+                                <input type="text" name="password" class="input__text" placeholder="johnidoe@oply.com">
                             </div>
                         </div>
                         <div class="field">
                             <label for="" class="label">Confirmation of password</label>
                             <div class="input__text-icon">
-                                <span class="input__icon"><i class="icon-key"></i></span>
-                                <input type="text" class="input__text" placeholder="johnidoe@oply.com">
+                                <span class="input__icon">
+                                    <i class="icon-key"></i>
+                                </span>
+                                <input type="text" name="confirmPassword" class="input__text" placeholder="johnidoe@oply.com">
                             </div>
                         </div>
                     </div>
-    
+
                     <div class="sign-up__form-footer">
                         <div class="btn__outer">
                             <button class="btn btn__center">Sign up now</button>
                         </div>
-                        <p class="btn__bottom-msg">Already have an account? <a href="">Sign in here</a></a></p>
+                        <p class="btn__bottom-msg">Already have an account?
+                            <a href="">Sign in here</a>
+                            </a>
+                        </p>
                     </div>
                 </form>
             </div>
@@ -56,6 +71,8 @@
             <img src="https://res.cloudinary.com/dj09xr9gd/image/upload/v1528813897/illustrations/illu-connect.png" class="sign-up__bg-connect">
         </main>
     </div>
-    
+
 </body>
+<script src="../../../web/js/actions.js"></script>
+
 </html>
