some changes on namings

--- a/src/View/page/client-card.html
+++ b/src/View/page/client-card.html
@@ -58,28 +58,28 @@
       </div>
     </div>
 
-    <div class="block__container">
+    <div class="client-card__block-container yo client-card__block-container">
       <div class="block-info">
         <div class="block-info__head">
           <h2 class="title__blockInfo">Account information</h2>
           <a class="icon icon-edit"></a>
         </div>
         <div class="block-info__main">
-          <div class="info__text">
+          <div class="block-info__content">
             <span class="icon-user"></span>
-            <p>Jean-Michel StartUpfutur</p>
+            <p class="block-info__text">Jean-Michel StartUpfutur</p>
           </div>
-          <div class="info__text">
+          <div class="block-info__content">
             <span class="icon-mail"></span>
-            <p>jean.michel@startupfutur.com</p>
+            <p class="text-ellipsed">jean.michel@startupfutur.com</p>
           </div>
-          <div class="info__text">
+          <div class="block-info__content">
             <span class="icon-house"></span>
-            <p>33 rue marbeuf, 75008 Paris</p>
+            <p class="block-info__text">33 rue marbeuf, 75008 Paris</p>
           </div>
-          <div class="info__text">
+          <div class="block-info__content">
             <span class="icon-phone"></span>
-            <p>06 79 24 55 39</p>
+            <p class="block-info__text">06 79 24 55 39</p>
           </div>
         </div>
       </div>
@@ -90,15 +90,15 @@
           <a class="icon icon-edit"></a>
         </div>
         <div class="block-info__main">
-          <div class="info__text--singleLine">
+          <div class="block-info__content--singleLine">
             <span class="label">Status</span>
             <span class="tag__process">In process</span>
           </div>
-          <div class="info__text--singleLine">
+          <div class="block-info__content--singleLine">
             <span class="label">Client status</span>
             <span>True prospect</span>
           </div>
-          <div class="info__text--singleLine">
+          <div class="block-info__content--singleLine">
             <span class="label">Client origin</span>
             <span>Internet SEO</span>
           </div>
@@ -112,11 +112,11 @@
           <a class="icon icon-edit"></a>
         </div>
         <div class="block-info__main">
-          <div class="info__text--singleLine">
+          <div class="block-info__content--singleLine">
               <span class="label">Impact level</span>
               <span>High</span>
           </div>
-          <div class="info__text--singleLine">
+          <div class="block-info__content--singleLine">
             <span class="label">Actual account manager</span>
             <a href="">Alison Charrier</a>
           </div>
@@ -129,7 +129,7 @@
         <h2 class="title__blockInfo">Rapport de visite</h2>
       </div>
 
-      <div class="info__text info__data">
+      <div class="block-info__content--centered">
         <p>No data to display</p>
         <button class="btn btn__visit">
           <i class="icon-add"></i>Ajouter un rapport de visite</button>
