--- a/web/scss/components/_block-info.scss
+++ b/web/scss/components/_block-info.scss
@@ -1,25 +1,14 @@
-.block__container {
-	display: flex;
-	justify-content: space-between;
-	margin-bottom: 26px;
-
-	.block-info {
-		max-width: calc(33.333% - 16px);
-	}
-}
-
 .block-info {
 	background: $white;
-	border: 1px solid #E3E9F3;
+	border: 1px solid $dividerLight;
 	border-radius: 2px;
 	min-height: 235px;
-	width: 100%;
 
 	&__head {
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
-		border-bottom: 1px solid #E3E9F3;
+		border-bottom: 1px solid $dividerLight;
 		padding: 0 24px;
 
 		.icon {
@@ -31,17 +20,10 @@
 		padding: 1.5rem 2rem;
 	}
 
-	.info__text {
+	&__content {
 		display: flex;
 		align-items: center;
 		margin-bottom: 14px;
-
-		p {
-			// margin-left: 12px;
-			overflow: hidden;
-			white-space: nowrap;
-			text-overflow: ellipsis;
-		}
 
 		span[class^="icon"] {
 			margin-right: 12px;
@@ -60,18 +42,23 @@
 		}
 	}
 
-	.info__text--singleLine {
-		@extend .info__text;
+	&__content--singleLine {
+		@extend .block-info__content;
 		flex-direction: column;
 		align-items: flex-start;
 	}
 
-	.info__data {
+	&__content--centered {
+		@extend .block-info__content;
 		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		text-align: center;
 
 		p {
 			margin-top: 30px;
 			margin-bottom: 22px;
 		}
+
 	}
 }
