add new tag styles

--- a/src/View/page/client-card.html
+++ b/src/View/page/client-card.html
@@ -92,7 +92,7 @@
         <div class="block-info__main">
           <div class="block-info__content--singleLine">
             <span class="label">Status</span>
-            <span class="tag__process">In process</span>
+            <span class="tag__process processing">In process</span>
           </div>
           <div class="block-info__content--singleLine">
             <span class="label">Client status</span>
@@ -114,7 +114,7 @@
         <div class="block-info__main">
           <div class="block-info__content--singleLine">
               <span class="label">Impact level</span>
-              <span>High</span>
+              <span class="tag__impact--simple high">High</span>
           </div>
           <div class="block-info__content--singleLine">
             <span class="label">Actual account manager</span>
