--- a/web/scss/components/_tag.scss
+++ b/web/scss/components/_tag.scss
@@ -25,12 +25,31 @@
         }
     }
 
+    &__impact--simple {
+        @extend .tag__impact;
+        font-size: inherit;
+        border: none;
+        padding: 0;
+    }
+
     // process
     &__process {
         font-size: inherit;
         
         &:before {
             content: '• ';
+        }
+
+        &.not-processing {
+            color: $orange;
+        }
+
+        &.processing {
+            color: #00CFD8;
+        }
+
+        &.processed {
+            color: $green;
         }
     }
 }
