--- a/web/scss/containers/_modal.scss
+++ b/web/scss/containers/_modal.scss
@@ -14,3 +14,22 @@
         font-weight: $fwRegular;
     }
 }
+
+.edit__complementaryInfos {
+
+    .field__divider {
+        &:after {
+            content: "";
+            width: 31%;
+        }
+    }
+}
+
+.client-card {
+
+    .modal__main {
+        padding-top: 70px;
+        min-height: 366px;
+        padding: 70px 11rem 70px;
+    }
+}
