update modal style when oppened

--- a/web/scss/containers/_header.scss
+++ b/web/scss/containers/_header.scss
@@ -2,40 +2,43 @@
 	background: $white;
 	box-shadow: $boxShadow00;
 	padding: 20px 0;
-
 	@include maxWidth($bpTablet) {
 		padding: 20px;
 	}
-
 	&__inner {
-		@extend .layout;
+		max-width: $widthMax;
+		margin: 0 auto;
+		padding-left: 20px;
+		padding-right: 20px;
+		padding-bottom: 3rem;
+		@include minWidth($bpTablet) {
+			width: 90%;
+		}
+		@include minWidth($bpDesktopSm) {
+			width: 80%;
+		}
 		display: flex;
 		justify-content: space-between;
 		padding-bottom: 0;
 	}
-
-	&__lside, &__rside {
+	&__lside,
+	&__rside {
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
-
 		.btn__client {
 			margin-right: 2.5rem;
 		}
-	}
-
-	// logo
+	} // logo
 	&__logo {
 		display: flex;
 		align-items: center;
 		text-decoration: none;
 		margin-right: 1.5rem;
-
 		img {
 			width: 50px;
 			margin-right: 10px;
 		}
-
 		span {
 			font-size: 21px;
 			line-height: 27px;
@@ -43,34 +46,27 @@
 			color: $textBlue;
 			margin-right: 15px;
 		}
-	}
-
-	// nav
+	} // nav
 	&__nav {
 		&-inner {
 			display: flex;
 		}
-
 		&-el {
 			margin-right: 1.5rem;
-
 			a {
 				font-weight: $fwLight;
 				text-decoration: none;
 			}
-        }
-        
-        &-el.current {
-            a {
-                font-weight: $fwMedium;
-                &:before { 
-                    content: '• ';
-                }
-            }
-        }
-		
+		}
+		&-el.current {
+			a {
+				font-weight: $fwMedium;
+				&:before {
+					content: '• ';
+				}
+			}
+		}
 	}
-
 	@include maxWidth($bpTablet) {
 		.user {
 			display: none;
