--- a/web/scss/tools/_classes.scss
+++ b/web/scss/tools/_classes.scss
@@ -1,3 +1,15 @@
+body.modal-active {
+    background-color: rgba(255,255,255,.3);
+    .header {
+        box-shadow: none;
+    }
+
+    .layout {
+        opacity: .5;
+        filter: blur(25px);
+    }
+}
+
 .color-green {
     color: $green;
 }
