Client card integration + upgrading modal (#62)
* add icon & init html

* add css client cart

* update client card styles

* some changes on namings

* small fix on line height

* add new tag styles

* update modal style when oppened

--- a/web/scss/style.scss
+++ b/web/scss/style.scss
@@ -11,6 +11,7 @@
 @import 'pages/sign-up';
 @import 'pages/client-list';
 @import 'pages/client-create';
+@import 'pages/client-card';
 
 
 // ATOMS
@@ -20,6 +21,7 @@
 // even smaller then atoms
 @import 'components/tag';
 @import 'components/btn';
+@import 'components/block-info';
 
 // titles
 @import 'components/title';
