--- a/src/View/page/client-card.html
+++ b/src/View/page/client-card.html
@@ -1,151 +1,186 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Joey - Sign up</title>
-    <link rel="stylesheet" type="text/css" href="../../../web/css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,800" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Joey - Sign up</title>
+  <link rel="stylesheet" type="text/css" href="../../../web/css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,800" rel="stylesheet">
 </head>
+
 <body class="client-card">
-    <header class="header">
-      <div class="header__inner">
-        <div class="header__lside">
-            <a href="" class="header__logo">
-                <img src="https://res.cloudinary.com/dj09xr9gd/image/upload/v1528893547/logo_1.svg">
-                <span>JOEY</span> 
-            </a>
+  <header class="header">
+    <div class="header__inner">
+      <div class="header__lside">
+        <a href="" class="header__logo">
+          <img src="https://res.cloudinary.com/dj09xr9gd/image/upload/v1528893547/logo_1.svg">
+          <span>JOEY</span>
+        </a>
 
-            <nav class="header__nav">
-                <ul class="header__nav-inner">
-                    <li class="header__nav-el">
-                        <a href="">Client list</a>
-                    </li>
-                    <li class="header__nav-el">
-                        <a href="">Sales list</a>
-                    </li>
-                    <li class="header__nav-el">
-                        <a href="">Manage my account</a>
-                    </li>
-                </ul>
-            </nav>
+        <nav class="header__nav">
+          <ul class="header__nav-inner">
+            <li class="header__nav-el">
+              <a href="">Client list</a>
+            </li>
+            <li class="header__nav-el">
+              <a href="">Sales list</a>
+            </li>
+            <li class="header__nav-el">
+              <a href="">Manage my account</a>
+            </li>
+          </ul>
+        </nav>
 
-        </div>
-        <div class="header__rside">
-            <button class="btn btn__client"><i class="icon-add-user"></i>Add a client</button>
-            <div class="user">
-                <p class="user__name">Mr. John Doe</p>
-                <div class="user__img"></div>
-            </div>
+      </div>
+      <div class="header__rside">
+        <button class="btn btn__client">
+          <i class="icon-add-user"></i>Add a client</button>
+        <div class="user">
+          <p class="user__name">Mr. John Doe</p>
+          <div class="user__img"></div>
         </div>
       </div>
+    </div>
   </header>
 
   <div class="layout">
-    <div class="contain-title">
-      <h1 class="title title__customerCard">Start Up du Futur</h1>
-      <div class="info-card">
-        <p>Add 03/06/2018 by <a href="">Léa Sayarath</a></p> 
-        <p>Last modified 3h ago by <a href="">Alison Charrier</a></p>
+    <div class="client-card__headtitle">
+      <h1 class="title title__clientCard">Start Up du Futur</h1>
+      <div class="client-card__side-infos">
+        <p>Add 03/06/2018 by
+          <a href="">Léa Sayarath</a>
+        </p>
+        <p>Last modified 3h ago by
+          <a href="">Alison Charrier</a>
+        </p>
       </div>
     </div>
 
-    <div class="block__container">
+    <div class="client-card__block-container yo client-card__block-container">
       <div class="block-info">
-        <div class="title info__containTitle">
+        <div class="block-info__head">
           <h2 class="title__blockInfo">Account information</h2>
           <a class="icon icon-edit"></a>
         </div>
-        <div class="info__text first">
-          <span class="icon-user"></span>
-          <p>Jean-Michel StartUpfutur</p>
+        <div class="block-info__main">
+          <div class="block-info__content">
+            <span class="icon-user"></span>
+            <p class="block-info__text">Jean-Michel StartUpfutur</p>
+          </div>
+          <div class="block-info__content">
+            <span class="icon-mail"></span>
+            <p class="text-ellipsed">jean.michel@startupfutur.com</p>
+          </div>
+          <div class="block-info__content">
+            <span class="icon-house"></span>
+            <p class="block-info__text">33 rue marbeuf, 75008 Paris</p>
+          </div>
+          <div class="block-info__content">
+            <span class="icon-phone"></span>
+            <p class="block-info__text">06 79 24 55 39</p>
+          </div>
         </div>
-        <div class="info__text">
-          <span class="icon-mail"></span>
-          <p>jean.michel@startupfutur.com</p>
-        </div>
-        <div class="info__text">
-          <span class="icon-house"></span>
-          <p>33 rue marbeuf, 75008 Paris</p>
-        </div>
-        <div class="info__text">
-          <span class="icon-phone"></span>
-          <p>06 79 24 55 39</p>
-        </div>    
       </div>
 
       <div class="block-info">
-        <div class="title info__containTitle">
+        <div class="block-info__head">
           <h2 class="title__blockInfo">Process</h2>
           <a class="icon icon-edit"></a>
         </div>
+        <div class="block-info__main">
+          <div class="block-info__content--singleLine">
+            <span class="label">Status</span>
+            <span class="tag__process processing">In process</span>
+          </div>
+          <div class="block-info__content--singleLine">
+            <span class="label">Client status</span>
+            <span>True prospect</span>
+          </div>
+          <div class="block-info__content--singleLine">
+            <span class="label">Client origin</span>
+            <span>Internet SEO</span>
+          </div>
+        </div>
+
       </div>
 
       <div class="block-info">
-        <div class="title info__containTitle">
+        <div class="block-info__head">
           <h2 class="title__blockInfo">Complementary infos</h2>
           <a class="icon icon-edit"></a>
-        </div>   
+        </div>
+        <div class="block-info__main">
+          <div class="block-info__content--singleLine">
+            <span class="label">Impact level</span>
+            <span class="tag__impact--simple high">High</span>
+          </div>
+          <div class="block-info__content--singleLine">
+            <span class="label">Actual account manager</span>
+            <a href="">Alison Charrier</a>
+          </div>
+        </div>
       </div>
     </div>
 
     <div class="block-info">
-      <div class="title info__containTitle">
+      <div class="block-info__head">
         <h2 class="title__blockInfo">Rapport de visite</h2>
       </div>
 
-      <div class="info__text info__data">
+      <div class="block-info__content--centered">
         <p>No data to display</p>
-        <button class="btn btn__visit"><i class="icon-add"></i>Ajouter un rapport de visite</button>
+        <button class="btn btn__visit">
+          <i class="icon-add"></i>Ajouter un rapport de visite</button>
       </div>
     </div>
   </div>
 
   <!-- CREATE POPIN ACCOUNT INFORMATION -->
-  <div class="create-client__modal edit__accountInformation" style="display: none;">
+  <div class="create-client__modal edit__accountInformation" style="display:none;">
     <div class="modal__head">
-        <h1 class="title__dashboard popin">Modify : Account information</h1>
+      <h1 class="title__dashboard popin">Modify : Account information</h1>
     </div>
     <div class="modal__main">
       <div class="create-client__modal-step with-divider">
         <div class="field__divider">
           <div class="field">
-              <label for="" class="label">Civility</label>
-              <div class="input__text-icon">
-                  <input type="text" class="input__text">
-              </div>
+            <label for="" class="label">Civility</label>
+            <div class="input__text-icon">
+              <input type="text" class="input__text">
+            </div>
           </div>
           <div class="field">
             <label for="" class="label">Email</label>
             <div class="input__text-icon">
-                <input type="text" class="input__text">
+              <input type="text" class="input__text">
             </div>
           </div>
           <div class="field">
-              <label for="" class="label">Company name</label>
-              <div class="input__text-icon">
-                  <input type="text" class="input__text">
-              </div>
+            <label for="" class="label">Company name</label>
+            <div class="input__text-icon">
+              <input type="text" class="input__text">
+            </div>
           </div>
         </div>
         <div class="field__divider">
           <div class="field">
             <label for="" class="label">Last name</label>
             <div class="input__text-icon">
-                <input type="text" class="input__text">
+              <input type="text" class="input__text">
             </div>
           </div>
           <div class="field">
-              <label for="" class="label">Phone</label>
-              <div class="input__text-icon">
-                  <input type="text" class="input__text">
-              </div>
+            <label for="" class="label">Phone</label>
+            <div class="input__text-icon">
+              <input type="text" class="input__text">
+            </div>
           </div>
           <div class="field">
             <label for="" class="label">Company city</label>
             <div class="input__text-icon">
-                <input type="text" class="input__text">
+              <input type="text" class="input__text">
             </div>
           </div>
         </div>
@@ -153,19 +188,19 @@
           <div class="field">
             <label for="" class="label">First name</label>
             <div class="input__text-icon">
-                <input type="text" class="input__text">
+              <input type="text" class="input__text">
             </div>
           </div>
           <div class="field">
             <label for="" class="label">Company address</label>
             <div class="input__text-icon">
-                <input type="text" class="input__text">
+              <input type="text" class="input__text">
             </div>
           </div>
           <div class="field">
             <label for="" class="label">Company zipcode</label>
             <div class="input__text-icon">
-                <input type="text" class="input__text">
+              <input type="text" class="input__text">
             </div>
           </div>
         </div>
@@ -179,26 +214,24 @@
       </div>
     </div>
   </div>
-
-
   <!-- CREATE POPIN MODIFY COMPLEMENTARY -->
-  <div class="create-client__modal edit__complementaryInfos" style="display:none" >
+  <div class="create-client__modal edit__complementaryInfos" style="display:none">
     <div class="modal__head">
-        <h1 class="title__dashboard popin">Modify : Complementary infos</h1>
+      <h1 class="title__dashboard popin">Modify : Complementary infos</h1>
     </div>
     <div class="modal__main">
       <div class="create-client__modal-step with-divider">
         <div class="field__divider">
           <div class="field">
-              <label for="" class="label">Impact level</label>
-              <div class="input__text-icon">
-                  <input type="text" class="input__text">
-              </div>
+            <label for="" class="label">Impact level</label>
+            <div class="input__text-icon">
+              <input type="text" class="input__text">
+            </div>
           </div>
           <div class="field">
             <label for="" class="label">Actual account manager</label>
             <div class="input__text-icon">
-                <input type="text" class="input__text">
+              <input type="text" class="input__text">
             </div>
           </div>
         </div>
@@ -212,32 +245,30 @@
       </div>
     </div>
   </div>
-
-
   <!-- CREATE POPIN MODIFY PROCESS -->
-  <div class="create-client__modal edit__process" style="display:block" >
+  <div class="create-client__modal edit__process" style="display:none">
     <div class="modal__head">
-        <h1 class="title__dashboard popin">Modify : Process</h1>
+      <h1 class="title__dashboard popin">Modify : Process</h1>
     </div>
     <div class="modal__main">
       <div class="create-client__modal-step with-divider">
         <div class="field__divider">
           <div class="field">
-              <label for="" class="label">Status</label>
-              <div class="input__text-icon">
-                  <input type="text" class="input__text">
-              </div>
+            <label for="" class="label">Status</label>
+            <div class="input__text-icon">
+              <input type="text" class="input__text">
+            </div>
           </div>
           <div class="field">
             <label for="" class="label">Client Status</label>
             <div class="input__text-icon">
-                <input type="text" class="input__text">
+              <input type="text" class="input__text">
             </div>
           </div>
           <div class="field">
             <label for="" class="label">Client origin</label>
             <div class="input__text-icon">
-                <input type="text" class="input__text">
+              <input type="text" class="input__text">
             </div>
           </div>
         </div>
@@ -251,7 +282,6 @@
       </div>
     </div>
   </div>
-
-
 </body>
+
 </html>
