--- a/web/scss/components/_title.scss
+++ b/web/scss/components/_title.scss
@@ -20,3 +20,19 @@
 		color: $textBlue;
 	}
 }
+
+.title__clientCard {
+	font-size: 31px;
+	line-height: 47px;
+	font-weight: $fwBold;
+	color: $blue;
+	margin-top: 44px;
+	margin-bottom: 34px;
+}
+
+.title__blockInfo {
+	font-size: 16px;
+	line-height: 25px;
+	font-weight: 500;
+	padding: 13px 0 11px;
+}
