update / upgrade select styles and script

--- a/src/View/page/index.html
+++ b/src/View/page/index.html
@@ -43,7 +43,7 @@
                 <option value="hashtag">Hashtag</option>
             </select>
             <div class="custom-select sources">
-                <span class="custom-select-trigger">SELECTOR</span>
+                <span class="custom-select-trigger"><span>Select value</span><i class="icon-select"></i></span>
                 <div class="custom-options">
                     <span class="custom-option" data-value="profile">Profile</span>
                     <span class="custom-option" data-value="profile">Profile</span>
