--- a/src/View/page/client-create.html
+++ b/src/View/page/client-create.html
@@ -38,8 +38,10 @@
                 <button class="btn btn__client">
                     <i class="icon-add-user"></i>Add a client</button>
                 <div class="user">
-                    <p class="user__name">Mr. John Doe</p>
-                    <div class="user__img"></div>
+                    <p class="user__name">Mr. John Doe <i class="icon-arrow-bottom"></i></p>
+                    <div class="user__log-out">
+                        <a href="#" class="user__log-out__link"><i class="icon-log-out"></i>Log out</a>    
+                    </div>
                 </div>
             </div>
         </div>
