--- a/web/scss/containers/_header.scss
+++ b/web/scss/containers/_header.scss
@@ -28,6 +28,10 @@
 		align-items: center;
 		.btn__client {
 			margin-right: 2.5rem;
+
+			i {
+				font-size: 12px;
+			}
 		}
 	} // logo
 	&__logo {
